--- a/src/app/browsersource/elements/elements.component.scss
+++ b/src/app/browsersource/elements/elements.component.scss
@@ -5,6 +5,9 @@
 
 .outer-container {
   position: relative;
+  overflow: hidden;
+  min-width: fit-content;
+  min-height: fit-content;
 }
 .rainbow::before {
   content: '';
