--- a/src/app/browsersource/hypetrain/train/carriage/carriage.component.html
+++ b/src/app/browsersource/hypetrain/train/carriage/carriage.component.html
@@ -16,7 +16,7 @@
       height: (settings.hypetrain.train[type].size.height * (hypetrain.currentCarriageScale || 100)) / 100 + 'px',
       'background-image': settings.hypetrain.train[type].pictures.background
         ? 'url(' + settings.hypetrain.train[type].pictures.background + '#)'
-        : 'url(/assets/carriage-outer.png)'
+        : 'url(assets/templates/hypetrain/carriage-outer.png)'
     }"
   >
     <img
@@ -38,7 +38,7 @@
         height: (settings.hypetrain.train[type].pictureBounds.height! * hypetrain.currentCarriageScale) / 100 + 'px',
         'background-image': settings.hypetrain.train[type].pictures.foreground
           ? 'url(' + settings.hypetrain.train[type].pictures.foreground + '#)'
-          : 'url(/assets/carriage-inner.png)'
+          : 'url(assets/templates/hypetrain/carriage-inner.png)'
       }"
     ></div>
   </div>
