--- a/src/app/browsersource/elements/audio/audio.component.html
+++ b/src/app/browsersource/elements/audio/audio.component.html
@@ -1,5 +1,5 @@
 <div class="viewport-flex">
-    <audio *ngIf="element" #audioPlayer (loadeddata)="onLoadedData()" (error)="onError($event)" (ended)="onPlaybackEnded()">
-        <source [src]="element.src" (error)="onError($event)">
-    </audio>  
+  <audio *ngIf="element" #audioPlayer (loadeddata)="onLoadedData()" (error)="onError($event)" (ended)="onPlaybackEnded()">
+    <source [src]="element.src" (error)="onError($event)" />
+  </audio>
 </div>
